[package]
name = "glium_sdl2"
version = "0.16.0"
authors = ["Danny Spencer <dan@atomicpotato.net>"]
license = "MIT/Apache-2.0"
keywords = ["graphics", "gamedev", "glium", "sdl", "opengl"]
documentation = "http://nukep.github.io/glium-sdl2/"
repository = "https://github.com/nukep/glium-sdl2/"
description = "An SDL2 backend for Glium - a high-level OpenGL wrapper for the Rust language."

[dependencies]
sdl2 = "0.33"
glium = "0.27"

[dev-dependencies]
clock_ticks = "0.1.0"
genmesh = "0.4"
obj = { version = "0.5", features = ["usegenmesh"] }
